# 6502emulator

./: .gitignore  CMakeLists.txt  README.md  ram
include/: cpu.h  instructions.h
src/: cpu.c  instructions.c  main.c
